--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_CONTRACT_ADDRESS=0x60390cB4E9E64290f8aD59e72881c62EAff3A97D
-VITE_MONAD_TESTNET_RPC=https://testnet.monad.xyz
-VITE_MONAD_CHAIN_ID=10200
+VITE_MONAD_TESTNET_RPC=monad-testnet.drpc.org
+VITE_MONAD_CHAIN_ID=10143
