--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
+# Monad Testnet Configuration
+# RPC URL - protocol (https://) will be added automatically if missing
+VITE_MONAD_TESTNET_RPC=monad-testnet.drpc.org
+
+# Chain ID for Monad Testnet
+VITE_MONAD_CHAIN_ID=10143
+
+# Your deployed ERC20 token contract address
 VITE_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
-VITE_MONAD_TESTNET_RPC=https://testnet.monad.xyz
-VITE_MONAD_CHAIN_ID=10200
+
+# Replace VITE_CONTRACT_ADDRESS with your actual contract address after deployment
