--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "description": "Premium web application for managing ERC20 tokens on Monad testnet",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0F0F1A",
-  "theme_color": "#7B3FF2",
+  "background_color": "#0A0A0F",
+  "theme_color": "#8B5CF6",
   "orientation": "portrait-primary",
   "icons": [
     {
